Changing the menu message

--- a/packages/mtd-mobile-ui/src/app/app.component.html
+++ b/packages/mtd-mobile-ui/src/app/app.component.html
@@ -4,7 +4,7 @@
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>{{ title }}</ion-list-header>
-          <ion-note>Welcome!</ion-note>
+          <ion-note>Taanshi kiyawaaw!</ion-note>
           <ion-menu-toggle
             auto-hide="false"
             *ngFor="let p of appPages; let i = index"
