Updated the look of the search result page to differentiate 2 languages more clearly

--- a/packages/mtd-mobile-ui/src/app/shared/entry-list.component.scss
+++ b/packages/mtd-mobile-ui/src/app/shared/entry-list.component.scss
@@ -26,7 +26,11 @@
   text-align: left;
 }
 
-.matchLeftContainer,
+.matchLeftContainer {
+  display: initial;
+  color: var(--ion-color-secondary);
+}
+
 .matchRightContainer {
   display: initial;
 }
