--- a/packages/mtd-mobile-ui/src/app/shared/search-entry-list.component.html
+++ b/packages/mtd-mobile-ui/src/app/shared/search-entry-list.component.html
@@ -19,7 +19,7 @@
               [innerHTML]="highlight(entry, 'L1')"
             ></span>
           </div>
-          <div class="matchLeftContainer"><span> | </span></div>
+          <div class="matchLeftContainer"><span>&nbsp;&nbsp;&nbsp;</span></div>
           <div class="matchRightContainer">
             <span
               class="response matchRightDiv"
