Updated look of search results and browse for clarity

--- a/packages/mtd-mobile-ui/src/app/browse/browse.page.html
+++ b/packages/mtd-mobile-ui/src/app/browse/browse.page.html
@@ -68,7 +68,7 @@
     >
       <ion-title *ngIf="currentStart.start !== null"
         >Viewing {{ currentStart.start + 1 }} to {{ currentStart.start + 10 }}
-        of {{ (browseService.$currentEntries | async)?.length }} Dictionary
+        of {{ (browseService.$currentEntries | async)?.length }} Phrasebook
         Entries</ion-title
       >
     </div>
