--- a/packages/mtd-mobile-ui/src/app/shared/entry-list.component.scss
+++ b/packages/mtd-mobile-ui/src/app/shared/entry-list.component.scss
@@ -29,10 +29,12 @@
 .matchLeftContainer {
   display: initial;
   color: var(--ion-color-secondary);
+  margin-right: 3em; // Add more space here
 }
 
 .matchRightContainer {
   display: initial;
+  margin-left: 3em; // Add more space here
 }
 
 .matchRightDiv {
