Updates search and browse interfaces for spacing, renamed title

--- a/packages/mtd-web-ui/src/app/pages/home/home.component.html
+++ b/packages/mtd-web-ui/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <mtd-single>
-  <h1 title>MotherTongues Dictionary</h1>
+  <h1 title>Southern Michif Phrasebook</h1>
   <div class="centered">
     <p>To get started, click on the search button and start learning!</p>
     <p>
