Search matches in L2 set to black

--- a/packages/mtd-mobile-ui/src/app/shared/entry-list.component.scss
+++ b/packages/mtd-mobile-ui/src/app/shared/entry-list.component.scss
@@ -57,7 +57,7 @@
 }
 
 .matchRightDiv .langMatched {
-  color: var(--ion-color-secondary);
+  // color: var(--ion-color-secondary);
   font-weight: 900;
 }
 
