--- a/packages/mtd-mobile-ui/src/app/shared/entry.component.html
+++ b/packages/mtd-mobile-ui/src/app/shared/entry.component.html
@@ -5,9 +5,9 @@
   <ion-card-header>
     <ion-card-title>{{ entry.word }}</ion-card-title>
     <ion-card-subtitle>{{ entry.definition }}</ion-card-subtitle>
-    <ion-button>
+  <!--  <ion-button>
             <ion-icon slot="start" name="musical-notes-outline"></ion-icon>
-        </ion-button>
+        </ion-button> -->
   </ion-card-header>
 
   <ion-card-content>
